Safari365 Prod/src/objects/WetuLocation__c.object
<CustomObject>
    <fields>
        <fullName>Location_Id__c</fullName>
        <externalId>true</externalId>
        <label>Location Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Wetu Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location_Name__c</columns>
        <columns>Location_Type__c</columns>
        <columns>Location_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Location_Name__c</columns>
        <columns>Location_Id__c</columns>
        <columns>Location_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>WL-{000000000}</displayFormat>
        <label>Wetu Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wetu Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>